<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Best Flashlight</string>
    <string name="title_activity_dashboard">Best Flashlight</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_flash">LED Flashlight</string>
    <string name="title_activity_screen">Screen Flashlight</string>
    <string name="title_activity_color_screen">Color Flashlight</string>
    <string name="title_activity_donation">Donation</string>
    <string name="title_activity_color_dashboard">Choose the color</string>
 	
 	<string name="flashlight">flashlight</string>
 	<string name="donationText">the developers of this app love orange and passion fruit juice, if you liked this app feel free to pay us a juice:)</string>
 	<string name="screen">Screen</string>
 	<string name="colorscreen">Color Screen</string>
 	<string name="payjuice">pay me juice</string>
 	<string name="sensor">Light on Shake</string>
 	
 	<string name="donate1">Donate about 1 dollar</string>
 	<string name="donate2">Donate about 5 dollar</string>
 	<string name="donate3">Donate about 20 dollar</string>
 	<string name="colorclick">Just Click on the Screen :)</string>
 	
 	<string name="givePermission">you need to allow permission</string>
 	
 	<string name="shakeenabled">light when Shake Enabled!</string>
 	<string name="shakedesabled">light when shake Desabled!</string>
</resources>