<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donationText" />
       <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#ddd" />

    <Button
        android:id="@+id/btProduct1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate1" 
        android:onClick="doar"/>
    
     <Button
        android:id="@+id/btProduct2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate2"
        android:onClick="doar" />
     
      <Button
        android:id="@+id/btProduct3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate3"
        android:onClick="doar" />
       <FrameLayout
         android:id="@+id/propaganda"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true">
         
       <com.google.android.gms.ads.AdView
           android:id="@+id/adViewDonation"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content" 
           ads:adSize="BANNER"
           ads:adUnitId="ca-app-pub-7040951679419231/2368145108"/>
      

     </FrameLayout>

</LinearLayout>